--- a/FiscaliZi.Colinfo/Assets/ColetaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/ColetaView.xaml
@@ -28,6 +28,7 @@
         <Model:EnderecoConverter x:Key="EnderecoConverter"/>
         <Model:TotalValPedsConverter x:Key="TotalValPedsConverter"/>
         <Model:TotalPesoPedsConverter x:Key="TotalPesoPedsConverter"/>
+        <Model:IsDuplePedConverter x:Key="IsDuplePedConverter"/>
         <sys:DateTime x:Key="DataPedidos">#03/20/2017#</sys:DateTime>
     </UserControl.Resources>
 
@@ -191,8 +192,8 @@
                     <DataGrid x:Name="dgPedidos"
                               Grid.Row="0"
                               ItemsSource="{Binding Pedidos}"
-                              AutoGenerateColumns="False" 
-                              CanUserAddRows="False" 
+                              AutoGenerateColumns="False"
+                              CanUserAddRows="False"
                               CanUserResizeColumns="False" 
                               CanUserReorderColumns="False" 
                               CanUserDeleteRows="False" 
@@ -245,6 +246,16 @@
                                                 Binding="{Binding Converter={StaticResource PesoPedidoConverter}}"
                                                 CanUserResize="False"
                                                 Width="50" />
+                            <DataGridTextColumn Header="DP"
+                                CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
+                                CanUserResize="False">
+                                <DataGridTextColumn.Binding>
+                                    <MultiBinding Converter="{StaticResource IsDuplePedConverter}">
+                                        <Binding Path="ItemsSource" ElementName="dgPedidos" />
+                                        <Binding />
+                                    </MultiBinding>
+                                </DataGridTextColumn.Binding>
+                            </DataGridTextColumn>
                         </DataGrid.Columns>
                     </DataGrid>
                     <Separator 
