--- a/FiscaliZi.Colinfo/Assets/ColetaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/ColetaView.xaml
@@ -29,7 +29,9 @@
         <Model:TotalValPedsConverter x:Key="TotalValPedsConverter"/>
         <Model:TotalPesoPedsConverter x:Key="TotalPesoPedsConverter"/>
         <Model:IsDuplePedConverter x:Key="IsDuplePedConverter"/>
-        <sys:DateTime x:Key="DataPedidos">#03/20/2017#</sys:DateTime>
+        <Model:CheckDuplePedIconConverter x:Key="CheckDuplePedIconConverter"/>
+        <Model:CheckDuplePedForegroundConverter x:Key="CheckDuplePedForegroundConverter"/>
+        <sys:DateTime x:Key="DataPedidos">#04/19/2017#</sys:DateTime>
     </UserControl.Resources>
 
     <Grid>
@@ -42,7 +44,7 @@
         <MDesign:Card 
             Grid.Column="0" 
             BorderThickness="3"
-            MinHeight="700" Width="300">
+            MinHeight="700" Width="320">
             <Grid x:Name="grdVendas" Height="700">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -69,10 +71,11 @@
                         <MDesign:PackIcon Kind="Refresh" />
                     </Button>
                     <MDesign:PopupBox 
-                        Padding="2 0 2 0" 
-                        Foreground="#FF918B8B" 
+                        Padding="2 0 2 0"
+                        Foreground="#FF918B8B"
                         Margin="130,10,0,5"
-                        Width="25" Height="25">
+                        Width="25"
+                        Height="25">
                         <StackPanel>
                             <Button Content="More"/>
                             <Button Content="Options"/>
@@ -87,7 +90,7 @@
                     <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                         <TextBlock 
                             Text="VEND" 
-                            Margin="10,0,0,0" 
+                            Margin="36,0,0,0" 
                             FontWeight="Bold"/>
                         <TextBlock 
                             Text="ROTA" 
@@ -116,6 +119,11 @@
                             <Border x:Name="brResumo" Height="25">
                                 <StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5,3,0,0">
+                                        <MDesign:PackIcon 
+                                            Kind="{Binding Pedidos, Converter={StaticResource CheckDuplePedIconConverter}}"
+                                            HorizontalAlignment="Right"
+                                            Foreground="{Binding Kind, RelativeSource={RelativeSource Self}, Converter={StaticResource CheckDuplePedForegroundConverter}}"
+                                            Margin="0,0,10,0" />
                                         <TextBlock Text="{Binding CodVendedor}" 
                                                FontWeight="Bold" >
                                             <TextBlock.Foreground>
@@ -203,7 +211,7 @@
                               IsSynchronizedWithCurrentItem="True" 
                               Style="{DynamicResource DatagridCustomMDesign}" 
                               CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
-                              RowStyle="{DynamicResource DataGridRowCustomMDesign}"
+                              RowStyle="{DynamicResource DataGridRow_Pedidos}"
                               ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" 
                               SelectionMode="Single" 
                               VerticalAlignment="Top"
@@ -246,16 +254,6 @@
                                                 Binding="{Binding Converter={StaticResource PesoPedidoConverter}}"
                                                 CanUserResize="False"
                                                 Width="50" />
-                            <DataGridTextColumn Header="DP"
-                                CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
-                                CanUserResize="False">
-                                <DataGridTextColumn.Binding>
-                                    <MultiBinding Converter="{StaticResource IsDuplePedConverter}">
-                                        <Binding Path="ItemsSource" ElementName="dgPedidos" />
-                                        <Binding />
-                                    </MultiBinding>
-                                </DataGridTextColumn.Binding>
-                            </DataGridTextColumn>
                         </DataGrid.Columns>
                     </DataGrid>
                     <Separator 
