--- a/FiscaliZi.Colinfo/Resources/Dictionaries/dicDatagrid.xaml
+++ b/FiscaliZi.Colinfo/Resources/Dictionaries/dicDatagrid.xaml
@@ -127,6 +127,20 @@
         <Setter Property="Validation.ErrorTemplate" Value="{x:Null}"/>
     </Style>
 
+    <Style x:Key="DataGridRow_Pedidos" TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource MaterialDesignDataGridRow}">
+        <Setter Property="Background" Value="{x:Null}"/>
+        <Setter Property="SnapsToDevicePixels" Value="true"/>
+        <Setter Property="Validation.ErrorTemplate" Value="{x:Null}"/>
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding DP}" Value="S">
+                <Setter Property="Foreground" Value="RoyalBlue"></Setter>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding DP}" Value="S1">
+                <Setter Property="Foreground" Value="Red"></Setter>
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
+
     <Style x:Key="DataGridRow_DetalhePedido" TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource MaterialDesignDataGridRow}">
         <Setter Property="Background" Value="{x:Null}"/>
         <Setter Property="SnapsToDevicePixels" Value="true"/>
