--- a/FiscaliZi.Colinfo/Assets/ColetaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/ColetaView.xaml
@@ -56,7 +56,7 @@
                     Orientation="Horizontal" 
                     Margin="10,0">
                     <DatePicker x:Name="datPedidos" 
-                                SelectedDate="{StaticResource DataPedidos}"
+                                SelectedDate="{x:Static sys:DateTime.Now}"
                                 Language="pt-BR"
                                 Width="90" 
                                 HorizontalAlignment="Left" 
