--- a/FiscaliZi.Colinfo/Assets/EntradaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/EntradaView.xaml
@@ -30,7 +30,7 @@
         <Model:IsVisibleColunaVendedorConverter x:Key="IsVisibleColunaVendedorConverter"/>
         <Model:NullatorCodVendedorConverter x:Key="NullatorCodVendedorConverter"/>
     </UserControl.Resources>
-    
+
     <Grid >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
@@ -50,32 +50,24 @@
                     Grid.Row="0" 
                     Orientation="Horizontal" 
                     Margin="10,0">
-                    <DatePicker x:Name="datPedidos" 
-                                SelectedDate="{x:Static sys:DateTime.Now}"
-                                Language="pt-BR"
-                                Width="90" 
+                    <TextBlock x:Name="datPedidos" 
+                               Text="{Binding Source={x:Static sys:DateTime.Now}, StringFormat={}{0:D}}"
+                                Language="pt-BR" 
                                 HorizontalAlignment="Left" 
-                                Margin="0,10,0,5"/>
-                    <Button x:Name="btnAtualizaArquivos"
-                            cal:Message.Attach="AtualizaArquivos" 
-                            HorizontalAlignment="Right" 
-                            Width="25" Height="25"
-                            Padding="2 0 2 0"
-                            Margin="15,10,0,5"
-                            MDesign:RippleAssist.IsCentered="True">
-                        <MDesign:PackIcon Kind="Refresh" />
-                    </Button>
+                                Margin="0,10,0,5" FontWeight="Bold" FontFamily="Sitka Display" FontSize="14"/>
                     <MDesign:PopupBox 
                         HorizontalAlignment="Right" 
                         Padding="2 0 2 0" 
                         Foreground="#FF918B8B" 
-                        Margin="215,10,0,5"
+                        Margin="150,10,0,5"
                         Width="25" Height="25">
                         <StackPanel>
                             <Button 
                                 Content="Add Romaneio..."
                                 cal:Message.Attach="Dialog_AddRomaneio" />
-                            <Button Content="Options"/>
+                            <Button 
+                                Content="Limpar Tudo"
+                                cal:Message.Attach="LimparTudo"/>
                         </StackPanel>
                     </MDesign:PopupBox>
                 </StackPanel>
@@ -264,6 +256,7 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
+        <MDesign:Snackbar MessageQueue="{Binding SnackbarMQ}" Grid.ColumnSpan="2"/>
     </Grid>
     
 </UserControl>
