--- a/FiscaliZi.Colinfo/Assets/MainView.xaml
+++ b/FiscaliZi.Colinfo/Assets/MainView.xaml
@@ -3,24 +3,22 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"                   
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"       
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"        
-    xmlns:Metro="http://metro.mahapps.com/winfx/xaml/controls" 
-    xmlns:dragablz="clr-namespace:Dragablz;assembly=Dragablz"
-    xmlns:dockablz="clr-namespace:Dragablz.Dockablz;assembly=Dragablz"
-    xmlns:wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
-    xmlns:local="clr-namespace:FiscaliZi.Colinfo" 
-    xmlns:Assets="clr-namespace:FiscaliZi.Colinfo.Assets"
-    xmlns:cal="http://www.caliburnproject.org"
-    xmlns:MDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"    
     mc:Ignorable="d"
+    xmlns:MDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:Metro="http://metro.mahapps.com/winfx/xaml/controls" 
+    xmlns:Dragablz="clr-namespace:Dragablz;assembly=Dragablz"
+    xmlns:Dockablz="clr-namespace:Dragablz.Dockablz;assembly=Dragablz"
+    xmlns:Wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
+    xmlns:Cal="http://www.caliburnproject.org"
+    xmlns:Assets="clr-namespace:FiscaliZi.Colinfo.Assets"
     Title="Assistente De Coleta"
     GlowBrush="{DynamicResource AccentColorBrush}"
     BorderBrush="{DynamicResource WindowTitleColorBrush}" 
-    BorderThickness="2" WindowStartupLocation="CenterScreen"
+    BorderThickness="2" 
+    WindowStartupLocation="CenterScreen"
     Width="1360" Height="800"><!--Width="1360" Height="800"-->
-
-    <Window.Resources>
-    </Window.Resources>
+    
     <Metro:MetroWindow.Flyouts>
         <Metro:FlyoutsControl>
             <Metro:Flyout 
@@ -34,37 +32,36 @@
         </Metro:FlyoutsControl>
     </Metro:MetroWindow.Flyouts>
 
-    <wpf:DialogHost Identifier="RootDialog" SnackbarMessageQueue="{Binding ElementName=MainSnackbar, Path=MessageQueue}">
+    <Wpf:DialogHost Identifier="RootDialog" SnackbarMessageQueue="{Binding ElementName=MainSnackbar, Path=MessageQueue}">
         <Grid>
-            <dockablz:Layout>
-            <dragablz:TabablzControl BorderThickness="0"
+            <Dockablz:Layout>
+                <Dragablz:TabablzControl BorderThickness="0"
                                  Margin="0,-1,0,1" 
                                  FixedHeaderCount="2" >
-                <TabItem Header="ENTRADA">
-                    <Assets:EntradaView cal:View.Model="{Binding EntradaVM}" Margin="8"/>
-                </TabItem>
-                <TabItem Header="COLETA">
-                    <Assets:ColetaView cal:View.Model="{Binding ColetaVM}" Margin="8" DataContext="{Binding ColetaVM}"/>
-                </TabItem>
-                <TabItem Header="CONFIGURAÇÕES">
-                    <dragablz:TabablzControl FixedHeaderCount="2"  >
-                        <TabItem Header="Geral">
-                            <Assets:ConfigGeralView cal:View.Model="{Binding ConfigGeralVM}" Margin="8"/>
-                        </TabItem>
-                        <TabItem Header="Produtos">
-                            <Assets:ConfigProdutosView cal:View.Model="{Binding ConfigProdutosVM}" Margin="8"/>
-                        </TabItem>
-                        <TabItem Header="Clientes">
-                            <Assets:ConfigClientesView cal:View.Model="{Binding ConfigClientesVM}" Margin="8"/>
-                        </TabItem>
-                    </dragablz:TabablzControl>
-                </TabItem>
-            </dragablz:TabablzControl>
-        </dockablz:Layout>
+                    <TabItem Header="ENTRADA">
+                        <Assets:EntradaView Cal:View.Model="{Binding EntradaVM}" Margin="8"/>
+                    </TabItem>
+                    <TabItem Header="COLETA">
+                        <Assets:ColetaView Cal:View.Model="{Binding ColetaVM}" Margin="8" DataContext="{Binding ColetaVM}"/>
+                    </TabItem>
+                    <TabItem Header="CONFIGURAÇÕES">
+                        <Dragablz:TabablzControl FixedHeaderCount="2"  >
+                            <TabItem Header="Geral">
+                                <Assets:ConfigGeralView Cal:View.Model="{Binding ConfigGeralVM}" Margin="8"/>
+                            </TabItem>
+                            <TabItem Header="Produtos">
+                                <Assets:ConfigProdutosView Cal:View.Model="{Binding ConfigProdutosVM}" Margin="8"/>
+                            </TabItem>
+                            <TabItem Header="Clientes">
+                                <Assets:ConfigClientesView Cal:View.Model="{Binding ConfigClientesVM}" Margin="8"/>
+                            </TabItem>
+                        </Dragablz:TabablzControl>
+                    </TabItem>
+                </Dragablz:TabablzControl>
+            </Dockablz:Layout>
             <MDesign:Snackbar x:Name="MainSnackbar" MessageQueue="{Binding MainMessageQueue}"/>
         </Grid>
-        
-    </wpf:DialogHost>
+    </Wpf:DialogHost>
         
 
 
