--- a/MDFast/Assets/EntradaView.xaml
+++ b/MDFast/Assets/EntradaView.xaml
@@ -1,12 +1,11 @@
 ﻿<UserControl 
-    x:Class="FiscaliZi.MDFast.Views.Entrada"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:ignore="http://www.galasoft.ch/ignore"
-        mc:Ignorable="d ignore"
-        DataContext="{Binding EntradaVM, Source={StaticResource Locator}}">
+    x:Class="FiscaliZi.MDFast.Assets.EntradaView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ignore="http://www.galasoft.ch/ignore"
+    mc:Ignorable="d ignore">
 
     <Grid>
         <Grid.RowDefinitions>
