--- a/MDFast/Assets/MainView.xaml
+++ b/MDFast/Assets/MainView.xaml
@@ -1,48 +1,43 @@
-﻿<Controls:MetroWindow x:Class="FiscaliZi.MDFast.Assets.MainView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:Views="clr-namespace:FiscaliZi.MDFast.Views"
-        xmlns:ignore="http://www.galasoft.ch/ignore"
-        mc:Ignorable="d ignore"
-        Height="600"
-        Width="1000"
-        Title="MDFast - Manifesto de Documento Fiscal"
-        DataContext="{Binding Main, Source={StaticResource Locator}}" BorderBrush="{DynamicResource NormalBorderBrush}">
+﻿<Dragablz:DragablzWindow
+    x:Class="FiscaliZi.MDFast.Assets.MainView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d"
+    xmlns:Dragablz="clr-namespace:Dragablz;assembly=Dragablz"
+    xmlns:MDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:Wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
+    xmlns:Cal="http://www.caliburnproject.org"
+    xmlns:Assets="clr-namespace:FiscaliZi.MDFast.Assets"
+    Height="600"
+    Width="1000"
+    BorderBrush="{DynamicResource WindowTitleColorBrush}" 
+    BorderThickness="2" 
+    Background="{DynamicResource MaterialDesignPaper}"
+    Title="MDFast - Manifesto de Documento Fiscal" WindowStyle="None">
+    <Wpf:DialogHost Identifier="RootDialog" 
+                    SnackbarMessageQueue="{Binding ElementName=MainSnackbar, Path=MessageQueue}">
+        
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Assets:HomeView Cal:View.Model="{Binding HomeVM}" Margin="0,20,0,0"/>
+            <MDesign:Snackbar x:Name="MainSnackbar" 
+                              MessageQueue="{Binding MainMessageQueue}"
+                              Grid.Row="1"/>
+            <StatusBar Grid.Row="2" 
+                       VerticalAlignment="Bottom">
+                <StatusBarItem Content="NFPush App"/>
+                <Separator />
+                <StatusBarItem Content="Status:"/>
+                <StatusBarItem Content="{Binding SelectedItem.Header, ElementName=tbcMain, Mode=OneWay}" />
+            </StatusBar>
+        </Grid>
+        
+    </Wpf:DialogHost>
 
-    <Window.Resources>
-    </Window.Resources>
-
-    <Grid x:Name="Root">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <Controls:MetroAnimatedTabControl x:Name="tbcMain" Controls:TabControlHelper.IsUnderlined="True" Margin="5,10,0,0">
-            <Controls:MetroTabItem Header="Configurações" Controls:ControlsHelper.HeaderFontSize="15" Controls:ControlsHelper.HeaderFontWeight="Black">
-                <Controls:MetroAnimatedTabControl TabStripPlacement="Left">
-                    <Controls:MetroTabItem Header="VEÍCULOS" Controls:ControlsHelper.HeaderFontSize="15">
-                        <Views:ConfigVeiculos />
-                    </Controls:MetroTabItem>
-                    <Controls:MetroTabItem Header="GERAL" Controls:ControlsHelper.HeaderFontSize="15"/>
-                </Controls:MetroAnimatedTabControl>
-            </Controls:MetroTabItem>
-            <Controls:MetroTabItem Header="Entrada" Controls:ControlsHelper.HeaderFontSize="15" Controls:ControlsHelper.HeaderFontWeight="Black" Controls:TabControlHelper.IsUnderlined="True" Controls:ControlsHelper.HeaderMargin="10,0,0,0">
-                <Views:Entrada />
-            </Controls:MetroTabItem>
-            <Controls:MetroTabItem Header="Gerenciar" Controls:ControlsHelper.HeaderFontSize="15" Controls:ControlsHelper.HeaderFontWeight="Black">
-                <TextBlock FontSize="30" Text="Gerenciar..." />
-            </Controls:MetroTabItem>
-        </Controls:MetroAnimatedTabControl>
-        <StatusBar Grid.Row="2" VerticalAlignment="Bottom">
-            <StatusBarItem Content="NFPush App"/>
-            <Separator Style="{StaticResource MetroStatusBarSeparator}" />
-            <StatusBarItem Content="Status:"/>
-            <StatusBarItem Content="{Binding SelectedItem.Header, ElementName=tbcMain, Mode=OneWay}" />
-        </StatusBar>
-    </Grid>
-
-</Controls:MetroWindow>
+</Dragablz:DragablzWindow>
