--- a/MDFast/Assets/ConfigVeiculosView.xaml
+++ b/MDFast/Assets/ConfigVeiculosView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="FiscaliZi.MDFast.Views.ConfigVeiculos"
+    x:Class="FiscaliZi.MDFast.Assets.ConfigVeiculosView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -14,7 +14,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             DataContext="{Binding VeiculosVM, Source={StaticResource Locator}}" Loaded="UserControl_Loaded"
              dialogs:DialogParticipation.Register="{Binding}">
 
     <UserControl.Resources>
@@ -34,7 +33,7 @@
         </Grid.ColumnDefinitions>
 
         <Controls:FlipView x:Name="FlipVeiculos"
-                           SelectedIndex="1"
+                           SelectedIndex="0"
                            Height="500" Width="800"
                            MinWidth="20" MinHeight="20"
                            Grid.Row="0"
