--- a/MDFast/Assets/EntradaView.xaml
+++ b/MDFast/Assets/EntradaView.xaml
@@ -4,8 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ignore="http://www.galasoft.ch/ignore"
-    mc:Ignorable="d ignore">
+    mc:Ignorable="d">
 
     <Grid>
         <Grid.RowDefinitions>
